Add menus and effects

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "electron-photobooth",
+  "productName": "Electron Photobooth",
   "version": "1.0.0",
   "description": "",
   "main": "src/main.js",
