--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "electron-photobooth",
-  "productName": "Electron Photobooth",
+  "productName": "Photobooth",
   "version": "1.0.0",
   "description": "",
   "main": "src/main.js",
   "scripts": {
+    "build": "rimraf Photobooth-* && electron-packager . --platform=darwin,win32,linux --arch=x64 --icon=app",
     "start": "electron ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^1.8.4"
+    "electron": "^1.8.4",
+    "electron-packager": "^12.0.1",
+    "rimraf": "^2.6.2",
+    "wine": "^0.9.8"
   }
 }
